# ecdsafail-challenge

./: .gitignore  README.md  ROADMAP.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.note  autoresearch.retrospective.md  justfile  pyproject.toml  results.tsv
.github/workflows/: ci.yml  heavy-proofs.yml
analysis/: README.md  completeness_argument.md  cost_model.py  ecdlp_estimate.py  ladder_measured.json  mbuc_fast_adder_ops.json  mod_add_qq_ops.json  mod_fast_ops.json  requirements.txt  run.sh  scientific-value.md  scored_add_ops.json
analysis/adr/: 0013-quantum-addend-width-gap.md  0016-exact-mid-ladder-bound.md  0017-true-quantum-addend-ladder.md  0018-circuit-level-exceptional-detection.md  0019-end-to-end-ecdlp-recovery.md  0020-reversible-toy-modular-inverse.md  0021-reversible-lambda-division-point-add.md  0022-gate-level-toy-shor-capstone.md  0023-external-referee-review.md  0024-z3-production-width-adder-proof.md  0025-citation-accuracy-fixes.md  0026-honest-scope-framing.md  0027-mbuc-phase-correction-proof.md  0028-reusable-proof-toolkit.md  0029-proof-toolkit-op-stream-replayer.md  0030-kani-harness-bound-to-emitter.md  0031-emitted-solinas-reduction-proof.md  0032-emitted-fast-modular-wrappers-proof.md  0033-constprop-affine-soundness.md  0034-measurement-based-flag-uncompute.md  0035-proof-scope-scored-vs-reference.md  0036-scored-adder-emitted-proof.md  (+1 more)
experiment_memory/: 002_lazy_reduction_analysis.md
paper/: README.md  REVIEW.md  novelty-assessment.md  outline.md  technical-report.md
src/: kani_proofs.rs  main.rs  point_add.rs
(+71 files in other folders)
